--- a/.github/workflows/2-manual-workflow.yml
+++ b/.github/workflows/2-manual-workflow.yml
@@ -4,12 +4,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  first-workflow:
+  manual-workflow:
     runs-on: ubuntu-latest
 
     steps:
-      - name: First step
+      - name: First manual step
         run: echo "Hello world!"
 
-      - name: Secons step
+      - name: Second manual step
         run: echo "Hello again"
