--- a/.github/workflows/4-multi-jobs-workflow.yml
+++ b/.github/workflows/4-multi-jobs-workflow.yml
@@ -1,23 +1,31 @@
-name: Multi Jobs Workflow
+name: Dependent Multi Jobs Workflow
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   first-workflow-job:
     runs-on: ubuntu-latest
 
     steps:
-      - name: First step
+      - name: First Workflow Job
         run: |
           echo "Hello First Workflow!"
 
   second-workflow-job:
+    needs: [first-workflow-job]
     runs-on: ubuntu-latest
 
     steps:
-      - name: First step
+      - name: Second Workflow Job
         run: |
           echo "Hello second Workflow!"
+
+  third-workflow-job:
+    needs: [first-workflow-job,second-workflow-job]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Third Workflow Job
+        run: |
+          echo "Hello third Workflow!"
