Conditional Workflow Job update

--- a/.github/workflows/6-conditional-workflow.yml
+++ b/.github/workflows/6-conditional-workflow.yml
@@ -1,8 +1,9 @@
 name: Conditional Workflow
 
 on:
-  path:
-    - 'backend/**'
+  push:
+    paths:
+      - 'backend/**'
 
 jobs:
   conditional-workflow-job:
