--- a/.github/workflows/8-predefined-workflow.yml
+++ b/.github/workflows/8-predefined-workflow.yml
@@ -9,3 +9,11 @@ jobs:
     steps:
       - name: nodejs version
         run: node -v
+
+      - name: Setup Nodejs
+        uses: actions/setup-node@v4
+        with:
+          node-version: "16"
+
+      - name: check nodejs version
+        run: node -v
