--- a/.github/workflows/9-matrix.yml
+++ b/.github/workflows/9-matrix.yml
@@ -1,27 +1,21 @@
-# matrix is a way to run the same job multiple 
-# times with different inputs
-name: Node.js and OS Matrix Workflow
+name: Simple Matrix Workflow
 
 on:
-  workflow_dispatch:  # Trigger this workflow manually
+  workflow_dispatch: # Trigger this workflow manually
 
 jobs:
   matrix-workflow-job:
-    runs-on: ubuntu-latest  # The base runner is Ubuntu
+    runs-on: ubuntu-latest # Runner environment is Ubuntu
 
     strategy:
       matrix:
-        node-version: [14, 16]  # Test for Node.js versions 14 and 16
-        os: [ubuntu-latest, windows-latest]  # Test on Ubuntu and Windows
+        fruit: [apple, banana] # Test for two different fruits
+        color: [red, yellow] # Test for two different colors
 
     steps:
-      - name: Set up Node.js ${{ matrix.node-version }} on ${{ matrix.os }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install dependencies
-        run: npm install  # Install dependencies using npm
-
-      - name: Run tests
-        run: npm test  # Run the tests
+      - name: Print Fruit and Color
+        run: |
+          echo "Fruit: ${{ matrix.fruit }}"
+          echo "Color: ${{ matrix.color }}"
+          echo "Fruit and Color: ${{ matrix.fruit }} and ${{ matrix.color }}"
+          
